updated api doc
